--- a/a.css
+++ b/a.css
@@ -15,7 +15,7 @@ a{
 .container{
     max-width: 98rem;
     margin: 0 auto;
-    padding: 0 2.2rem;
+    
 }
 header{
     position: fixed;
@@ -31,7 +31,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 -1rem;
+    margin: 0 1rem;
 }
 .nav-list-mobile{
     display: none;
@@ -74,38 +74,38 @@ header{
 }
 .iphone-11{
     padding-top: 7rem;
-    margin-top: 7rem;
+    margin-top: 3rem;
     border-top: none;
     
 }
 .background{
     background-image: url("6.png");
-    height: 65rem;
-    background-size: auto 73.6rem;
+    height: 55rem;
+    background-size: auto 50rem;
     background-position: center;
     background-repeat: no-repeat;
-    border-top: 7rem solid #fff;
-    border-bottom: 5rem solid #fff;
+    border-top: 2rem solid #fff;
+    border-bottom: 2rem solid #fff;
 }
 
-.iphone-11-pro{
-    background: url("ip11.jpg");
-    margin-top: 15rem;
+.iphone-11-pro {
+    position: absolute;
+    background-color: #020202;
+    height: 60rem;
     width: 100%;
-   
+  
 }
-.hero {
-    height: 69.2rem;
-    background-size: auto 73.6rem;
-    background-position: center;
-    background-repeat: no-repeat;
-    border-top: .6rem solid #fff;
-    border-bottom: .6rem solid #fff;
+.img11 {
+    bottom: 0;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
 }
+
 .title{
     color: #fff;
     text-align: center;
-    padding-top: 5.5rem;
+    padding-top: 4rem;
 }
 .title-heading{
     font-size:5.6rem ;
@@ -132,203 +132,239 @@ header{
     font-size: 1.5rem;
     display: inline-block;
 }
-main{
+main {
     display: grid;
-    grid-gap:1.5rem;
-    padding: 2rem 9%;
-    grid-template-columns: 1fr 1fr ;
-    grid-template-rows: 1fr 1fr ;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 1.5rem;
+    padding: 2rem 11%;
+    padding-bottom: 7rem;
+    padding-top: 4rem;
+   
 }
-.item{
-  padding: 3% 4% 1% 4%;
-  border-radius: 10px;
-  overflow: hidden;
-  height: 30rem;
+
+.item {
+
+    display: grid;
+    grid-template-rows: 1fr auto auto auto; /* Adjust rows as per content */
+    border: 1px solid #ffffff;
+    border-radius: 8px;
+    overflow: hidden;
+    background-color: rgb(244, 246, 248);
+    padding-bottom: 3rem;
 }
-main h2{
-    color: black;
-    font-size:3rem ;
-    line-height: 1.07143;
-    letter-spacing: -.005rem;
+
+.imacimage {
+    
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-main h3{
-    color: black;
-    font-size: 1.4rem;
+
+.imacimage img {
+    max-width: 100%;
+    height: 20rem;
+    padding-bottom: 3rem;
+
+}
+
+.item .title h2 {
+    
+    color: #020202;
+    text-align: center;
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+
+}
+
+.item .title h3 {
+    font-size:1.8rem;
+    color: rgb(7, 7, 7);
     margin-top: 1rem;
-    letter-spacing: .008rem;
-    font-weight: 400;
-    
+    margin-bottom: 1rem;
+   
+}
+.item .title p {
+    margin-top: 1rem;
+    font-size:1.8rem ;
+    margin-bottom: 1rem; 
+}
+.item .cta{
+    text-align: center;
+    padding-bottom: 1rem;
+}
+.item .cta-link{
+    color: #0466b5;
+    font-size: 1.5rem;
+    display: inline-block;
 }
 
-.item:first-child{
-  /* grid-column: tracklinestar/ tracklineend*/
-  /* grid-row: tracklinestar/ tracklineend*/
-  /*imac */
-    grid-column: 1/2;
-    grid-row: 1/2; 
-    background-color: rgb(238, 239, 242);
-    
-}
- 
-.item:nth-child(2){
- /*ipad */
-    grid-column: 2/3;
-    grid-row: 1/2; 
-    background-color: rgb(238, 239, 242);
-}
+@media only screen and (max-width: 445px) {
 
-.item:nth-child(3){
- /*iphone */
-    grid-column: 1/2;
-    grid-row: 2/3;
-    background-color: rgb(238, 239, 242);
-    
-}
-
-.item:nth-child(4){
-    /*iwatch */
-    grid-column: 2/3;
-    grid-row: 2/3; 
-    background-color: rgb(238, 239, 242);
-    
-}
-main figure.imacimage{
-    display: block;
-    height: 50rem;
-    width: 30%;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-/*media query*/
-@media screen and (max-width: 767px) {
-    header{
-        height: 4.8rem;
+    body{
+        width: 100%;
     }
-    header .container{
-        padding: 0;
-    }
-
-    .iphone-11{
-        margin-top: 4.8rem;
-    }
-    .iphone-11-pro{
-        margin-top: 4.8rem;
-    }
-    .nav-list{
-        margin-top: 0;
-    }
-    .nav-item{
-        width: 4.8rem;
-        height: 4.8rem;
-        display: flex;
-        justify-content: center;
-    }
-    .nav-item-hidden{
+    .nav-list-larger {
         display: none;
     }
-    .mobile-menu{
-        position: relative;
-        z-index: 1500;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
+    
+
+    /* Hide the mobile menu icon */
+    .nav-list-mobile {
+        display: none;
     }
-    .line{
-        position: absolute;
-        width: 1.7rem;
-        height: 1px;
-        background-color: #fff;
-        transition: margin-top .3192s cubic-bezier(0.04, 0.04, 0.12, 0.96);
+
+    /* Show the mobile Apple logo */
+    .nav-link-apple {
+        display: block;
+        margin: 0 auto;
+        width: 3rem;
+        height: 3rem;
+        background: url("logo.png") center no-repeat;
+        background-size: contain;
+    }
         
+    main {
+        grid-template-columns: 1fr; 
+        padding: 1rem; 
     }
-    .line-top{
-        margin-top: 3px;
-    }
-    .line-bottom{
-        margin-top: -.4rem;
-    }
-    .active .line-top{
-        margin-top: 0;
-        transform: rotate(45deg) ;
-        transition: transform .3192s .1s;
 
+    .item {
+        margin-bottom: 2rem; /* Add spacing between grid items */
     }
-    main{
-    display: grid;
-    grid-gap:1.5rem;
-    padding: 2rem 9%;
-    grid-template-columns: 1fr 1fr ;
-    grid-template-rows: 1fr 1fr ;
-    grid-template-areas: "h2"; 
+    .background {
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
     }
-    .item{
-    padding: 3% 4% 1% 4%;
-    border-radius: 10px;
-    overflow: hidden;
-    height: 30rem;
+    body{
+        width: 100%;
     }
-    main h2{
-    color: black;
-    font-size:3rem ;
-    line-height: 1.07143;
-    letter-spacing: -.005rem;
+    main {
+        grid-template-columns: 1fr; 
+        padding: 1rem; 
     }
-    main h3{
-    color: black;
-    font-size: 1.4rem;
-    margin-top: 1rem;
-    letter-spacing: .008rem;
-    font-weight: 400;
-    }
-    .item:first-child{
-  /* grid-column: tracklinestar/ tracklineend*/
-  /* grid-row: tracklinestar/ tracklineend*/
-  /*imac */
-    grid-column: 1/2;
-    grid-row: 1/2; 
-    }
-    .item:nth-child(2){
- /*ipad */
-    grid-column: 2/3;
-    grid-row: 1/2; 
-    }
-    .item:nth-child(3){
- /*iphone */
-    grid-column: 1/2;
-    grid-row: 2/3; 
-    }
-    .item:nth-child(4){
-    /*iwatch */
-    grid-column: 2/3;
-    grid-row: 2/3; 
-    }
-}
-@media screen and (max-width: 1350px) {
-    .iphone-11-pro{
-        background: url("ip11.jpg");
-    }
-    .hero{
-    height: 55rem;
-    background-size: auto 50rem;
-    background-position: center;
-    background-repeat: no-repeat;
-    border-top: .6rem solid #fff;
-    border-bottom: .6rem solid #fff;
-    }
-    .title-heading{
-        font-size:4.4rem ;
 
+    .item {
+        margin-bottom: 2rem; /* Add spacing between grid items */
     }
-    .title-subheading{
-        font-size: 2.4rem;
+    .imacimage img {
+        max-width: 100%;
+        height: 15rem;
+        padding-bottom: 1rem;
+    
     }
-    .cta-link:nth-child(2){
-        margin-left: 2rem;
+    
+    .item .title h2 {
+        font-size: 1.7rem;
+    }
+    
+    .item .title h3 {
+        font-size:1.2rem;
+       
+    }
+    .item .title p {
+        font-size:1rem ;
+    }
+    .item .cta{
+        padding-bottom: 1rem;
+    }
+    .item .cta-link{
+        font-size: 1rem;
+    }
+
+    .nav-link{
+        font-size: 1.2rem;
+    }
+    
+    .nav-link-apple{
+        width: 2.5rem;
+        height: 4rem;
     }
    
+    .title1{
+        padding-top: 3.2rem;
+    }
+    .title-heading1{
+        font-size:3.5rem ;
+        line-height: 1.07143;
+        letter-spacing: -.005rem;
+    }
+    .iphone-11{
+        padding-top: 7rem;
+        margin-top: 3rem;
+        border-top: none;
+        font-size: 3rem;
+        
+    }
+    .background{
+        background-image: url("6.png");
+        height: 45rem;
+        background-size: auto 40rem;
+    }
     
+    .iphone-11-pro {
+        height: 55rem;
+    }
+    .title{
+        color: #fff;
+        text-align: center;
+        padding-top: 3.7rem;
+    }
+    .title-heading{
+        font-size:3.3rem ;
+    }
+    .title-subheading{
+        font-size: 2rem;
+    }
+    .title-price{
+        font-size: 1.3rem;
+    }
+    .cta{
+        margin-top: 1rem;
+    }
+    .cta-link{
+        color: #0466b5;
+        font-size: 1.2rem;
+        display: inline-block;
+    }
+    .item .cta-link{
+        font-size: 1.2rem;
+}
+}
+@media only screen and (max-width: 1025px) {
+    body{
+        width: 100%;
+    }
+    .background {
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+    .imacimage img {
+        max-width: 100%;
+        height: 15rem;
+        padding-bottom: 3rem;
+    
+    }
+    
+    .item .title h2 {
+        font-size: 2.2rem;
+    }
+    
+    .item .title h3 {
+        font-size:1.5rem;
+       
+    }
+    .item .title p {
+        font-size:1.3rem ;
+    }
+    .item .cta{
+        padding-bottom: 1.3rem;
+    }
+    .item .cta-link{
+        font-size: 1rem;
+    }
+
 }
