--- a/a.css
+++ b/a.css
@@ -79,8 +79,8 @@ header{
 }
 .background{
     background-image: url("6.png");
-    height: 55rem;
-    background-size: auto 50rem;
+    height: 50rem;
+    background-size: auto 40rem;
     background-position: center;
     background-repeat: no-repeat;
     border-top: 2rem solid #fff;
@@ -89,17 +89,17 @@ header{
 
 
 .iphone-11-pro .img11 {
-    width: 100%;
+    width: 37%;
     bottom: 0;
-    margin: 0 auto;
+    margin: 0 30%;
     align-items: center;
     justify-content: center;
+    height: 30rem;
 }
 .iphone-11-pro {
     bottom: 0;
-    margin-bottom:  20rem;
     background-color: #020202;
-    height: 60rem;
+    height: 50rem;
     
 }
 .title{
@@ -137,7 +137,7 @@ main {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-gap: 1.5rem;
-    padding: 2rem 11%;
+    padding: 2rem 12%;
     padding-bottom: 5rem;
     padding-top: -3rem;
 }
@@ -163,8 +163,8 @@ main {
 
 .imacimage img {
     max-width: 100%;
-    height: 20rem;
-    padding-bottom: 3rem;
+    height: 17rem;
+    padding-bottom: 2rem;
 
 }
 
@@ -199,14 +199,22 @@ main {
     display: inline-block;
 }
 
-@media only screen and (max-width: 454px) {
+@media only screen and (max-width: 740px) {
     header .container{
         padding: 0;
     }
-   
     .iphone-11-pro {
-            bottom: 0;
-            margin-bottom:  5rem;
+        height: 20rem;
+        bottom: none;
+    }
+    .iphone-11-pro .img11 {
+        width: 25%;
+        bottom: 0;
+        margin: 0;
+        align-items: center;
+        justify-content: center;
+        height: 20rem;
+        padding-bottom: 2rem;
     }
     main {
         grid-template-columns: 1fr; 
@@ -215,28 +223,9 @@ main {
 
     .item {
         margin-bottom: 2rem; /* Add spacing between grid items */
-    }
-    .background {
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
     }
     body{
-        width: 100%;
-    }
-    main {
-        grid-template-columns: 1fr; 
-        padding: 1rem; 
-    }
-
-    .item {
-        margin-bottom: 2rem; /* Add spacing between grid items */
-    }
-    .imacimage img {
-        max-width: 100%;
-        height: 15rem;
-        padding-bottom: 1rem;
-    
+        width: 80%;
     }
     
     .item .title h2 {
@@ -253,10 +242,7 @@ main {
     .item .cta{
         padding-bottom: 1rem;
     }
-    .item .cta-link{
-        font-size: 1rem;
-    }
-
+    
     .nav-link{
         font-size: 1.2rem;
     }
@@ -267,50 +253,21 @@ main {
     }
    
     .title1{
-        padding-top: 3.2rem;
+        padding-top: 2.8rem;
     }
     .title-heading1{
-        font-size:3.5rem ;
+        font-size:2.8rem ;
         line-height: 1.07143;
         letter-spacing: -.005rem;
     }
-    .iphone-11{
-        border-top: none;
-        font-size: 3rem;
-        
-    }
-    
-    .background{
-        padding-top: -2rem;
-        margin-top: -5rem;
-        background-image: url("6.png");
-        height: 45rem;
-        background-size: auto 40rem;
-    }
-    
-    .iphone-11-pro {
-        width: 100%;
-        max-height: 40rem;
-       
-    }
-    .iphone-11-pro .img11{
-        width: 100%;
-        height: 20rem;
-        padding-top: 5rem;
-        position: relative;
-        display: flex;
-        padding-bottom: none;
-        margin-bottom: -5rem;
-
-        
-    }
+   
     .title{
         color: #fff;
         text-align: center;
-        padding-top: 3.7rem;
+        padding-top: 3rem;
     }
     .title-heading{
-        font-size:3.3rem ;
+        font-size:2.8rem ;
     }
     .title-subheading{
         font-size: 2rem;
@@ -330,6 +287,7 @@ main {
         font-size: 1.2rem;
 }
 }
+
 @media only screen and (max-width: 1025px) {
     body{
         width: 100%;
@@ -346,11 +304,37 @@ main {
     
     }
     .iphone-11-pro {
-        height: 55rem;
+        height: 45rem;
         bottom: none;
         padding-bottom: 1rem ;
     }
-   
+    .iphone-11-pro .img11 {
+        width: 55%;
+        bottom: 0;
+        margin: 0 22%;
+        align-items: center;
+        justify-content: center;
+        height: 28rem;
+    }
+    .title{
+        padding-top: 3rem;
+    }
+    .title-heading{
+        font-size:5rem ;
+        line-height: 1.07143;
+        letter-spacing: -.005rem;
+    }
+    .title-subheading{
+        font-size: 2rem;
+        margin-top: 1rem;
+        letter-spacing: .008rem;
+        font-weight: 400;
+    }
+    .title-price{
+        font-size: 1.7rem;
+        color: #f8f4f4;
+        margin-top: 1rem;
+    }
     
     .item .title h2 {
         font-size: 2.2rem;
